<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:locale="en">
    <string name="app_name">podplayer</string>
    <string name="pref_podcastlist_title">Podcast list</string>
    <string name="pref_pause_on_unplugged_title">Pause on unplugged</string>
    <string name="pref_play_after_unplugged">Continue playing after unplugged</string>
    <string name="pref_pause_on_unplugged">Pause on unplugged</string>
    <string name="pref_long_click_on">on</string>
    <string name="pref_long_click_off">off</string>
    <string name="pref_enable_long_click">Open link on long click</string>
    <string name="pref_autoload_podcast">Autoload podcast</string>
    <string name="pref_summary_do_not_skip_listened_episode">Do not skip</string>
    <string name="pref_summary_skip_listened_episode">Skip</string>
    <string name="pref_skip_listened_episode_title">Skip listened spisode</string>
    
    <string name="pref_do_not_load_automatically">Do not load automatically</string>
    <string name="pref_load_podcasts_when_app_starts">Load podcasts when app starts</string>
    <string name="pref_read_timeout">Read timeout</string>
    <string name="pref_appearance_category">Appearance</string>
    <string name="pref_view_mode">View mode</string>
    <string name="pref_pull_to_update_ui">pull to update UI</string>
    <string name="pref_expandable_list_ui">expandable list UI</string>

    <string name="pref_expand">expand</string>
    <string name="pref_collapse">collapse</string>
    <string name="pref_expand_list_in_default">Expand list in default</string>
    <string name="pref_display_expand_icon_in_group">Display icon in group item</string>
    <string name="pref_display_episode_icon">Display episode icon</string>
    <string name="pref_date_format">Date format</string>
    <string name="pref_general_category">General</string>
    <string name="pref_network_category">Network</string>
    <string name="pref_show_podcast_icon">Display podcast icon</string>
    <string name="pref_gesture_category">Gesture</string>
    <string name="pref_icon_hide">hide</string>
    <string name="pref_icon_show">show</string>
    <string name="pref_use_gesture">Use gesture</string>
    <string name="pref_gesture_off">gesture off</string>
    <string name="pref_gesture_on">gesture on</string>
    <string name="pref_threshold_of_gesture_score">Threshold of score</string>
    <string name="pref_threshold_body">Set threshold of gesture score. 3.0 is recommended value.</string>
    <string name="pref_gesture_list">Gesture list</string>
    <string name="pref_other_category">Others</string>
    <string name="pref_license">License</string>
    <string name="pref_version">Version</string>
    <string name="mail_to_author">Mail to author</string>
    <string name="author_name">mamewotoko@gmail.com</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
  
    <string name="add">Add</string>
    <string name="error_malformed_url">Malformed URL</string>
    <string name="dialog_checking_podcast_url">Checking podcast URL &#8230;</string>
    <string name="dialog_checking_podcast_url_body">To cancel, please touch outside of this dialog or press back button</string>
    <string name="msg_add_podcast_failed">failed</string>
    <string name="msg_add_podcast_cancelled">cancelled</string>

    <string name="podcast_list_menu">Add podcast</string>
    <string name="reload_menu">Reload podcast</string>
    <string name="preference_menu">Preference</string>
    <string name="preference_title">Preference</string>
    <string name="exit_menu">Exit</string>
    <string name="selector_all">All</string>
    <string name="app_podcastlist_title">Podcast List Editor</string>
    <string name="podcast_added">Podcast: {0} is added</string>
    <string name="header_lastupdated">Last updated: </string>
    <string name="scan_qrcode_menu">Scan QR code of podcast</string>
    <string name="export_podcast_menu">Export podcast list as text</string>
    <string name="podcast_webpage_menu">Open podcast site</string>
    <string name="select_podcast_from_site">Select podcast</string>

    <string name="exported_podcasts">Exported podcasts</string>
    <string name="share_podcast">Share podcast</string>
    <string name="podcast_share">Share podcast</string>
    <string name="share_epiode">Share episode</string>
    <string name="clear_response_cache_title">Clear HTTP response cache</string>
    <string name="hint_podcast_url">URL of podcast XML</string>
    <string name="pref_episode_limit">Limit of episodes for each podcast</string>
    <string name="pref_episode_limit_title">Limit of episodes</string>

    <string name="pref_episode_limit_summary">{0} episode(s)</string>
    <string name="pref_episode_nolimit_summary">No limit</string>

    <string name="published_date">Published:</string>
    <string name="listened_date">Listened:</string>
    <string name="cache_cleared">Cache is cleared</string>
    <string name="pref_episode_order">Episode order</string>

    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_collapse">Collapse</string>
    <string name="action_expand">Expand</string>
    <string name="action_reload">Reload</string>
    <string name="action_abort">Abort</string>

    <string name="icon_desc_playing">Playing</string>
    <string name="icon_desc_pausing">Pausing</string>
    <string name="icon_desc_episode_none">No icon</string>

    <string name="notification_icon_desc_previous">Previous</string>
    <string name="notification_icon_desc_pause">Pause</string>
    <string name="notification_icon_desc_play">Play</string>
    <string name="notification_icon_desc_next">Next</string>

    <string name="icon_desc_gesture_table">Gesture table</string>
    <string name="icon_desc_qrcode">QR code to google play site, please share podplayer with your friends</string>
    <string name="icon_desc_github">Link to GitHub</string>

    <string name="qrcode_of_podcast_desc">QR code representing URL of selected podcast</string>
    <string name="qrcode_of_podcast">QR code of podcast</string>
    <string name="icon_desc_podcast_detail">Display detail of podcast</string>
    <string name="auth_required">Username and password are required</string>
    <string name="network_error">Network error</string>
    <string name="podcast_icon">Podcast icon</string>

    <string name="podcast_move_down">Move down</string>
    <string name="podcast_move_up">Move up</string>
    <string name="podcast_delete">Delete</string>

    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="login">login</string>
</resources>
