<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/pref_general_category" >
    <Preference
        android:key="podcastlist"
        android:title="@string/pref_podcastlist_title" />
    <CheckBoxPreference
        android:key="pause_on_unplugged"
        android:defaultValue="@bool/default_pause_on_unplugged"
        android:enabled="true"
        android:summaryOff="@string/pref_play_after_unplugged"
        android:summaryOn="@string/pref_pause_on_unplugged"
        android:title="@string/pref_pause_on_unplugged_title" />
    <CheckBoxPreference
        android:defaultValue="@bool/default_enable_long_click"
        android:key="enable_long_click"
        android:summaryOff="@string/pref_long_click_off"
        android:summaryOn="@string/pref_long_click_on"
        android:title="@string/pref_enable_long_click" />
    <CheckBoxPreference
        android:key="load_on_start"
        android:defaultValue="@bool/default_load_on_start"
        android:summaryOff="@string/pref_do_not_load_automatically"
        android:summaryOn="@string/pref_load_podcasts_when_app_starts"
        android:title="@string/pref_autoload_podcast" />
    <CheckBoxPreference
        android:key="skip_listened_episode"
        android:defaultValue="@bool/default_skip_listened_episode"
        android:summaryOff="@string/pref_summary_do_not_skip_listened_episode"
        android:summaryOn="@string/pref_summary_skip_listened_episode"
        android:title="@string/pref_skip_listened_episode_title" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_gesture_category" >
    <CheckBoxPreference
        android:key="enable_gesture"
        android:defaultValue="true"
        android:summaryOff="@string/pref_gesture_off"
        android:summaryOn="@string/pref_gesture_on"
        android:title="@string/pref_use_gesture" />
    <!--
        <com.mamewo.podplayer0.ScorePreference
        android:key="gesture_score_threshold"
        android:defaultValue="3.0"
        android:title="@string/pref_threshold_of_gesture_score" />
    -->
    <com.mamewo.podplayer0.SimpleDialogPreference
        android:key="gesture_list"
        android:title="@string/pref_gesture_list"
        />
  </PreferenceCategory> 
  <PreferenceCategory android:title="@string/pref_appearance_category" >
    <ListPreference
	android:key="view_mode"
	android:entries="@array/view_mode_title"
	android:entryValues="@array/view_mode_values"
	android:defaultValue="@string/default_view_mode"
	android:title="@string/pref_view_mode"
	/>
    <CheckBoxPreference
        android:key="expand_in_default"
        android:defaultValue="@bool/default_expand_in_default"
        android:summaryOff="@string/pref_collapse"
        android:summaryOn="@string/pref_expand"
        android:title="@string/pref_expand_list_in_default" />
    <CheckBoxPreference
        android:key="display_expand_icon_in_group"
        android:defaultValue="@bool/default_display_expand_icon_in_group"
        android:title="@string/pref_display_expand_icon_in_group" />
    <CheckBoxPreference
        android:key="display_episode_icon"
        android:defaultValue="@bool/default_display_episode_icon"
        android:title="@string/pref_display_episode_icon" />
    <ListPreference 
        android:key="episode_limit"
        android:defaultValue="@string/default_episode_limit"
        android:dialogTitle="@string/pref_episode_limit"
        android:entries="@array/pref_episode_limit_titles"
        android:entryValues="@array/pref_episode_limit_values"
        android:title="@string/pref_episode_limit_title"
        />

    <ListPreference
	android:key="episode_order"
	android:entries="@array/episode_item_order_entries"
	android:entryValues="@array/episode_item_order_entries_value"
	android:defaultValue="0"
	android:title="@string/pref_episode_order"
	/>
    <ListPreference
	android:key="date_format"
        android:defaultValue="@string/default_date_format"
	android:entries="@array/date_format_entries"
	android:entryValues="@array/date_format_entries_value"
	android:title="@string/pref_date_format"
	/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_network_category" >
    <Preference
        android:key="clear_response_cache"
        android:title="@string/clear_response_cache_title" />
    <ListPreference
        android:key="read_timeout"
        android:defaultValue="@string/default_read_timeout"
        android:dialogTitle="@string/pref_read_timeout"
        android:entries="@array/pref_timeout_titles"
        android:entryValues="@array/pref_timeout_values"
        android:title="@string/pref_read_timeout" />
  </PreferenceCategory>
  <PreferenceCategory
      android:title="@string/pref_other_category" >
    <com.mamewo.podplayer0.SimpleDialogPreference
        android:key="license"
        android:title="@string/pref_license" />
    <com.mamewo.podplayer0.SimpleDialogPreference
        android:key="version"
        android:title="@string/pref_version" />
    <Preference
        android:key="mail_to_author"
        android:summary="@string/author_name"
        android:title="@string/mail_to_author" />
  </PreferenceCategory>
</PreferenceScreen>
